Widened When column to avoid wrapping

--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -158,6 +158,10 @@ a.normal {
 
 /* photos/show, admin/photos/edit */
 
+.when {
+  width: 100px;
+}
+
 .comments-header {
   font-size: 16px;
 }
